atualização do env

--- a/.env
+++ b/.env
@@ -19,8 +19,8 @@ ZBX_SERVER_HOST=zabbix-server
 # Credenciais para o Script de Automação
 ZBX_USER=Admin
 ZBX_PASSWORD=zabbix
-TELEGRAM_TOKEN=8558085652:AAHzooh2zfxaWphGpoP_u0c2FeJsW0NoRNM
-TELEGRAM_CHAT_ID=-5018105761
+TELEGRAM_TOKEN=
+TELEGRAM_CHAT_ID=
 
 # Caminho do Template
 TEMPLATE_FILE=./zbx_scripts/template_Intelbras_v7.yaml
