Alterar hostname do zabbix-agent para 'Zabbix Server'

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,8 @@ services:
     container_name: zabbix-agent
     restart: always
     env_file: .env
+    environment:
+      - ZBX_HOSTNAME=Zabbix Server
     networks:
       - zabbix-net
 
